--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,13 +2,7 @@ name: run-tests
 
 on:
   push:
-    branches:
-      - '*'
-    tags:
-      - '*'
   pull_request:
-    branches:
-      - '*'
 
 jobs:
   build:
@@ -19,42 +13,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php:
-          - '7.3'
-          - '7.4'
-          - '8.0'
-          - '8.1'
-        laravel:
-          - 6.*
-          - 7.*
-          - 8.*
+        php: ['8.1', '8.2', '8.3']
+        laravel: ['10']
         prefer:
           - 'prefer-lowest'
           - 'prefer-stable'
-        include:
-          - laravel: '6.*'
-            testbench: '4.*'
-            phpunit: '^8.5.8|^9.3.3'
-          - laravel: '7.*'
-            testbench: '5.*'
-            phpunit: '^8.5.8|^9.3.3'
-          - laravel: '8.*'
-            testbench: '6.*'
-            phpunit: '^9.3.3'
-        exclude:
-          - php: '8.0'
-            laravel: 6.*
-            prefer: 'prefer-lowest'
-          - php: '8.0'
-            laravel: 7.*
-            prefer: 'prefer-lowest'
-          - php: '8.1'
-            laravel: 6.*
-          - php: '8.1'
-            laravel: 7.*
-          - php: '8.1'
-            laravel: 8.*
-            prefer: 'prefer-lowest'
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} --${{ matrix.prefer }}
 
@@ -81,7 +44,6 @@ jobs:
 
     - name: Install dependencies
       run: |
-        composer require "laravel/framework:${{ matrix.laravel }}" "phpunit/phpunit:${{ matrix.phpunit }}" "orchestra/testbench-browser-kit:${{ matrix.testbench }}" "orchestra/database:${{ matrix.testbench }}" --no-interaction --no-update
         composer update --${{ matrix.prefer }} --prefer-dist --no-interaction --no-suggest
 
     - name: Run tests for Local
