--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,11 +15,8 @@ jobs:
       matrix:
         php: ['8.1', '8.2', '8.3']
         laravel: ['10']
-        prefer:
-          - 'prefer-lowest'
-          - 'prefer-stable'
 
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} --${{ matrix.prefer }}
+    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
     steps:
     - uses: actions/checkout@v1
@@ -40,11 +37,11 @@ jobs:
       name: Cache dependencies
       with:
         path: ~/.composer/cache/files
-        key: composer-php-${{ matrix.php }}-${{ matrix.laravel }}-${{ matrix.prefer }}-${{ hashFiles('composer.json') }}
+        key: composer-php-${{ matrix.php }}-${{ matrix.laravel }}-${{ hashFiles('composer.json') }}
 
     - name: Install dependencies
       run: |
-        composer update --${{ matrix.prefer }} --prefer-dist --no-interaction --no-suggest
+        composer update --prefer-dist --no-interaction --no-suggest
 
     - name: Run tests for Local
       run: |
