--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,8 +13,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2', '8.3']
-        laravel: ['10']
+        php: ['8.1', '8.2', '8.3', '8.4']
+        laravel: ['10', '11']
+        exclude:
+          - laravel: '11'
+            php: '8.1'
+          - laravel: '10'
+            php: '8.4'
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
